@@ -4,6 +4,7 @@ require("omni")
 require("map-gen-preset-updates")
 require("tungsten-recipe-5d")
 require("strange-matter")
+require("compatibility/248k")
 
 local util = require("data-util");
 
